All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-10-15 niel
	Chg: Removed zeebinz/rarinfo library from our code (.../libs/zeebinz/rarinfo) to use the
		upstream version now it includes a composer configuration.
2016-10-14 DariusIII
	Fix: Remove semicolon in mysql-ddl.sql where it should not be in role_excluded_categories unique index row (fixes issue #2287)
	Fix: Port fix for rarinfo exceeding memory limits from upstream (https://github.com/zeebinz/rarinfo/commit/719979f117db1bed667e1fc9a51ce92df37d6850) (should fix issue #2263)
2016-10-13 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.5.2


2016-10-13 niel
	Chg: Switch Smarty to bootstrap through lithium instead of just the libraries. Hopefully this
		will not cause more problems than it fixes.
2016-10-13 DariusIII
	Chg: Remove images/covers support from Trakt (they will no longer serve images after october 31)
	Fix: getBrowseRange query was missing group_name used in API extended parameter
2016-10-12 DariusIII
	Fix: Advanced search link in Gamma theme
2016-10-12 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.5.1


2016-10-11 DariusIII
	Fix: TinyMCE URL handling
	Chg: Add edit function to forumposts
2016-10-10 DariusIII
	Chg: Add release_naming_regex for a.b.movies to properly name DJ releases
2016-10-07 niel
	Chg: Issue 2263 - Out of memory issue checking RAR files. Add limit checkings to the extra
		options.
	Fix: Add missing setting for settings table.
2016-10-05 DariusIII
	Chg: Add caching to getPagerCount function to reduce load on indexers with many API calls
2016-10-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.5.0


2016-09-26 niel
	Fix: Prevent TmdbAPI constructor from exiting hard. Instead it now returns null on failure