@@ -27,9 +27,9 @@ if ($totalArgs < 2) {
 		'adddate    : Look for releases added to our DB (older than|newer than) x hours. (modifiers: bigger,smaller)' . $n .
 		'postdate   : Look for posted to usenet (older than|newer than) x hours. (modifiers: bigger,smaller)' . $n .
 		'completion : Look for completion (less than) (modifiers: smaller)' . $n .
-		'categories_id : Look for releases within specified category (modifiers: equals)' . $n .
+		'categoriesid : Look for releases within specified category (modifiers: equals)' . $n .
 		'imdbid     : Look for releases with imdbid (modifiers: equals)' . $n .
-		'videos_id  : Look for releases with videos_id (modifiers: equals)' . $n .
+		'videosid  : Look for releases with videos_id (modifiers: equals)' . $n .
 		'totalpart  : Look for releases with certain number of parts (modifiers: equals,bigger,smaller)' . $n .
 		'nzbstatus  : Look for releases with nzbstatus (modifiers: equals)' . $n . $n .
 		'List of Modifiers:' . $n .
@@ -45,7 +45,7 @@ if ($totalArgs < 2) {
 		$_SERVER['_'] . ' ' . $argv[0] . ' guid=equals="8fb5956bae3de4fb94edcc69da44d6883d586fd0"' . $n .
 		$_SERVER['_'] . ' ' . $argv[0] . ' size=smaller="104857600" size=bigger="2048" groupname=like="movies"' . $n .
 		$_SERVER['_'] . ' ' . $argv[0] . ' fromname=like="@XviD.net" groupname=equals="alt.binaries.movies.divx" ignore' . $n .
-		$_SERVER['_'] . ' ' . $argv[0] . ' imdbid=equals=NULL categories_id=equals=2999 nzbstatus=equals=1 adddate=bigger=2880 # Remove other movie releases with non-cleaned names added > 120 days ago'
+		$_SERVER['_'] . ' ' . $argv[0] . ' imdbid=equals=NULL categoriesid=equals=2999 nzbstatus=equals=1 adddate=bigger=2880 # Remove other movie releases with non-cleaned names added > 120 days ago'
 	));
 }
 
