@@ -1183,7 +1183,7 @@ class ReleaseRemover
 							break;
 					}
 					break;
-				case 'videos_id':
+				case 'videosid':
 					switch ($args[1]) {
 						case 'equals':
 							return ' AND videos_id = ' . $args[2];
