@@ -12,6 +12,8 @@ For details of when a commit makes it into the stable branch see the ReleaseNote
 2016-10-15 niel
 	Chg: Removed zeebinz/rarinfo library from our code (.../libs/zeebinz/rarinfo) to use the
 		upstream version now it includes a composer configuration.
+	Fix: Revert over-zealous changes that would break functionality of delete_releases.php script
+		(Fixes issue 2277).
 2016-10-14 DariusIII
 	Fix: Remove semicolon in mysql-ddl.sql where it should not be in role_excluded_categories unique index row (fixes issue #2287)
 	Fix: Port fix for rarinfo exceeding memory limits from upstream (https://github.com/zeebinz/rarinfo/commit/719979f117db1bed667e1fc9a51ce92df37d6850) (should fix issue #2263)
